--- a/frontend/src/components/Header/index.module.css
+++ b/frontend/src/components/Header/index.module.css
@@ -5,10 +5,11 @@
     width: 100%;
     height: 70px;
     background: rgb(24, 24, 29);
-    color: cornsilk;
+    color: #ffffff;
     align-items: center;
-    padding: 0 20px;
-    letter-spacing: 3px;
-    font-size: 20px;
+    padding: 0 30px;
+    letter-spacing: 2px;
+    font-size: 24px;
     font-weight: 700;
+    z-index: 20;
 }
